<resources>
    <string name="app_name">My Medicine</string>
    <string name="action_settings">Settings</string>
    <string name="My_Profile">My Profile</string>
    <string name="Medicine_1">blood pressure blocker</string>
    <string name="Medicine_2">good bones</string>
    <string name="Medicine_3">Athlete’s food</string>

    <string name="Medicine_column1_1">Medicine: </string>
    <string name="Medicine_column1_2">Field of application: </string>
    <string name="Medicine_column1_3">Package insert date: </string>
    <string name="Medicine_column1_4">Changes: </string>
    <string name="Medicine3_column1_4">Side effects: </string>

    <string name="Medicine1_column2_2">reduces blood pressure</string>
    <string name="Medicine1_column2_3">1st of January 2015</string>
    <string name="Medicine1_column2_4">none</string>

    <string name="Medicine2_column2_2">helps at rheumatism</string>
    <string name="Medicine2_column2_3">21st of March 2016</string>
    <string name="Medicine2_column2_4">side effect diarrhea eliminated</string>

    <string name="Medicine3_column2_2">health foot fungus</string>
    <string name="Medicine3_column2_3">19th of March 2016</string>
    <string name="Medicine3_column2_4">everything is possible</string>


    <string name="Profile_column1_1">Owner:</string>
    <string name="Profile_column1_2">Age:</string>
    <string name="Profile_column1_3">Date of birth:</string>
    <string name="Profile_column1_4">Address:</string>
    <string name="Profile_column2_1">Otto Miller</string>
    <string name="Profile_column2_2">72</string>
    <string name="Profile_column2_3">15th August 1943</string>
    <string name="Profile_column2_4">Example Street 10, 08150 Halle, Germany</string>

</resources>
