<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Medicine_3"
        android:id="@+id/textView0"
        android:layout_gravity="center_horizontal"
        android:textSize="30dp"
        android:layout_marginTop="15dp"/>
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Medicine_column1_1"
                android:id="@+id/textView"
                android:layout_gravity="left"
                android:layout_column="0" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="    "
                android:id="@+id/textViewplazt"
                android:layout_gravity="left"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Medicine_3"
                android:id="@+id/textView2"
                android:layout_gravity="left"
                android:layout_column="3" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Medicine_column1_2"
                android:id="@+id/textView3"
                android:layout_gravity="left" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Medicine3_column2_2"
                android:id="@+id/textView4"
                android:layout_gravity="left"
                android:layout_column="3"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Medicine_column1_3"
                android:id="@+id/textView5"
                android:layout_gravity="left" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Medicine3_column2_3"
                android:id="@+id/textView6"
                android:layout_gravity="left"
                android:layout_column="3"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Medicine3_column1_4"
                android:id="@+id/textView7"
                android:layout_gravity="left" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Medicine3_column2_4"
                android:id="@+id/textView8"
                android:layout_gravity="left"
                android:layout_column="3"/>
        </TableRow>

    </TableLayout>




</LinearLayout>